--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,4 +7,13 @@ html
     = csrf_meta_tags
   title Henge
 body
-  = yield
+  header
+    - if logged_in?
+      = current_user.email
+      = link_to("logout", session_path, method: :delete)
+    - else
+      = link_to("register", new_user_path)
+      = link_to("login", new_session_path)
+  main
+    = yield
+  footer
