:wrench: product の操作画面へのリンクを追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,8 @@ body
   header
     - if logged_in?
       = current_user.email
+      = link_to("users", users_path)
+      = link_to("products", products_path)
       = link_to("logout", session_path, method: :delete)
     - else
       = link_to("register", new_user_path)
