:wrench: products 一覧の表示崩れが起こりにくいようにした

--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -13,7 +13,9 @@ table
     - @products.each do |product|
       tr
         td = product.name
-        td = product.link
+        td
+          a href=product.link
+            = URI.decode(product.link).truncate(70)
         td = link_to 'Show', product
         td = link_to 'Edit', edit_product_path(product)
         td = link_to 'Destroy', product, data: {:confirm => 'Are you sure?'}, :method => :delete
