--- a/app/views/impressions/_form.html.slim
+++ b/app/views/impressions/_form.html.slim
@@ -7,12 +7,9 @@
           li = message
 
   .field
-    = f.label :title
-    = f.text_field :title
+    = f.label(:title)
+    = f.text_field(:title)
   .field
-    = f.label :user
-    = f.text_field :user
-  .field
-    = f.label :product
-    = f.text_field :product
+    = f.label(:product)
+    = f.select(:product_id, @products.pluck(:name, :id))
   .actions = f.submit
