--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,6 +12,7 @@ body
       = current_user.email
       = link_to("users", users_path)
       = link_to("products", products_path)
+      = link_to("impressions", impressions_path)
       = link_to("logout", session_path, method: :delete)
     - else
       = link_to("register", new_user_path)
