:wrench: sanitize.css のベースカラーを差し替え

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
+@import "variables";
 @import "bourbon";
 @import "neat";
-@import "sanitize-css";
+@import "override-sanitize";
+@import "sanitize-css/lib/sanitize.scss";
 
