--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -5,15 +5,16 @@
 header {
   color: white;
   background-color: $base-color-1;
-
+  height: 60px;
   h1 {
     font-size: 30px;
     float: left;
   }
-  .nav-wrapper{
-    float: right;
-    a {
-      margin: 10px;
-    }
+}
+
+.button-wrapper {
+  float: right;
+  .button {
+    margin-left: 10px;
   }
 }
