:wrench: index users の見た目を整えた

--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,25 +1,13 @@
-h1 Listing users
-
 table
-  thead
-    tr
-      th Email
-      th Crypted password
-      th Salt
-      th
-      th
-      th
-
   tbody
     - @users.each do |user|
       tr
         td = user.email
-        td = user.crypted_password
-        td = user.salt
-        td = link_to 'Show', user
-        td = link_to 'Edit', edit_user_path(user)
-        td = link_to 'Destroy', user, data: {:confirm => 'Are you sure?'}, :method => :delete
+        td
+          .button-wrapper
+            a.button href=user_path(user) = t('.show')
+            a.button href=edit_user_path(user) = t('.edit')
+            a.button href=user_path(user) data={confirm: t('.are_you_sure'), method: :delete}
+              = t('.destroy')
 
-br
-
-= link_to 'New User', new_user_path
+a.button href=new_user_path = t('.new_user')
