:wrench: ヘッダーの見た目を調整

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -2,19 +2,22 @@
   @include outer-container;
 }
 
-header {
-  color: white;
-  background-color: $base-color-1;
-  height: 60px;
-  h1 {
-    font-size: 30px;
-    float: left;
-  }
-}
-
 .button-wrapper {
   float: right;
   .button {
     margin-left: 10px;
+  }
+}
+
+header {
+  color: white;
+  background-color: $base-color-1;
+  height: 50px;
+  h1 {
+    font-size: 30px;
+    float: left;
+  }
+  .button-wrapper {
+    margin-top: 8px;
   }
 }
