--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -11,8 +11,8 @@
     = f.text_field :email
   .field
     = f.label :password
-    = f.text_field :password
+    = f.password_field :password
   .field
     = f.label :password_confirmation
-    = f.text_field :password_confirmation
+    = f.password_field :password_confirmation
   .actions = f.submit
