name, code を表示・編集できるようにした

--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -2,6 +2,8 @@ table
   tbody
     - @users.each do |user|
       tr
+        td = user.code
+        td = user.name
         td = user.email
         td
           .button-wrapper
