--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -3,6 +3,12 @@ h1 = t('.title')
 table
   tbody
     tr
+      td = t('.code')
+      td = @user.code
+    tr
+      td = t('.name')
+      td = @user.name
+    tr
       td = t('.email')
       td = @user.email
     tr
