--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -7,6 +7,12 @@
           li = message
 
   .field
+    = f.label :name
+    = f.text_field :name
+  .field
+    = f.label :code
+    = f.text_field :code
+  .field
     = f.label :email
     = f.text_field :email
   .field
