nav を見て現在位置がわかるようにした

--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -15,7 +15,8 @@
   white-space: nowrap;
 
   &:hover,
-  &:focus {
+  &:focus,
+  &.active {
     background-color: $base-color-3;
     color: #fff;
   }
